--- a/Pages/MatchData/Details.cshtml
+++ b/Pages/MatchData/Details.cshtml
@@ -41,12 +41,12 @@ else
         <thead>
             <tr>
                 <th>Inning</th>
-                <th class="away-stat">R</th>
-                <th class="away-stat">H</th>
-                <th class="away-stat">E</th>
-                <th class="home-stat">R</th>
-                <th class="home-stat">H</th>
-                <th class="home-stat">E</th>
+                <th class="away-stat">Runs </th>
+                <th class="away-stat">Hits</th>
+                <th class="away-stat">Errors</th>
+                <th class="home-stat">Runs</th>
+                <th class="home-stat">Hits</th>
+                <th class="home-stat">Errors</th>
             </tr>
         </thead>
         <tbody>
